working on headshot, music and pickup spawning next

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/TechDemo4Level1
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.02-16.15.53
+MyProject2.TimeStamp=2024.01.02-20.22.25
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -1787,10 +1787,10 @@ BP_MyPlayer1_C.LOD=False
 BP_MyPlayer1_C.Cooking=True
 CharacterMovementComponent.AssetUserData=True
 CharacterMovementComponent.Collision=True
-SkeletalMeshComponent.SkeletalMesh=False
-SkeletalMeshComponent.Optimization=False
-SkeletalMeshComponent.MaterialParameters=False
-SkeletalMeshComponent.HLOD=False
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.MaterialParameters=True
+SkeletalMeshComponent.HLOD=True
 ABP_Soldier_C.Default=True
 PersonaPreviewSceneDescription.Animation=True
 PersonaPreviewSceneDescription.Mesh=True
@@ -2136,6 +2136,50 @@ SpringArmComponent.ComponentReplication=True
 SpringArmComponent.Activation=True
 SpringArmComponent.Cooking=True
 SpringArmComponent.Events=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+PhysicsConstraintTemplate.Constraint=True
+PhysicsConstraintTemplate.Constraint Behavior=True
+PhysicsConstraintTemplate.Linear Limits=True
+PhysicsConstraintTemplate.Angular Limits=True
+PhysicsConstraintTemplate.LinearMotor=True
+PhysicsConstraintTemplate.AngularMotor=True
+SkeletalBodySetup.Physics=True
+SkeletalBodySetup.Collision=True
+SkeletalBodySetup.BodySetup=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+AmmoPickup_C.Tick=True
+AmmoPickup_C.Replication=True
+AmmoPickup_C.Rendering=True
+AmmoPickup_C.Collision=True
+AmmoPickup_C.Actor=True
+AmmoPickup_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=False
+StaticMeshComponent.Physics=False
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+AmmoPickup_C.TransformCommon=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2153,7 +2197,7 @@ CollisionProfile=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
@@ -2165,14 +2209,14 @@ CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).Rota
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-CapsuleComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+CapsuleComponent=
+ShapeComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -2192,6 +2236,7 @@ UserWidget="\"Object.Layout.Slot\" "
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
 PanelWidget="\"Object.Layout.Slot\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [RootWindow]
 ScreenPosition=X=309.000 Y=149.000
@@ -2389,10 +2434,10 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.PlayerAim,InputSettings.Bindings.ActionMappings.PlayerShoot,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.PlayerAim,InputSettings.Bindings.ActionMappings.PlayerShoot,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,
-SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
-CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
+CapsuleComponent=
 SceneComponent=
-PlayerStart=CapsuleComponent.Physics.ConstraintsGroup,
+PlayerStart=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
 AimOffsetBlendSpace1D=AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,
 BP_MyPlayer2_C=CapsuleComponent.Physics.ConstraintsGroup,
@@ -2405,30 +2450,32 @@ TakeRecorderWorldSourceSettings=
 BP_MyPlayer1_C=
 K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
 PlayerCameraManager=
+PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/TechDemo4Level1
-MRUItem1=/Game/BP_MyPlayer1
-MRUItem2=/Game/MAINHUD_NEW
-MRUItem3=/Game/PlayerStuff/Ch15_nonPBR
-MRUItem4=/Game/AimingBeam
-MRUItem5=/Game/Levels/TechDemo4
-MRUItem6=/Game/PLAYERHUD
-MRUItem7=/Game/Blueprints/AimingBeam
-MRUItem8=/Game/PlayerStuff/Offset_AIM_Down
-MRUItem9=/Game/PlayerStuff/SoldierBlendSpace
-MRUItem10=/Game/MyMyShooterGameMode
-MRUItem11=/Game/Shooter_GameMode_BP
-MRUItem12=/Game/SharedHUDWidget
-MRUItem13=/Game/MainHUD
-MRUItem14=/Game/MyPlayer2
-MRUItem15=/Game/AimOffset
-MRUItem16=/Game/BP_MyPlayer2
-MRUItem17=/Game/Player2
-MRUItem18=/Game/PlayerStuff/Offset_AIM_Up
-MRUItem19=/Game/ABP_Soldier
+MRUItem0=/Game/AmmoPickup
+MRUItem1=/Game/Shooter_GameMode_BP
+MRUItem2=/Game/PlayerStuff/Ch15_nonPBR_PhysicsAsset
+MRUItem3=/Game/PlayerStuff/Ch15_nonPBR_Skeleton
+MRUItem4=/Game/PlayerStuff/Ch15_nonPBR
+MRUItem5=/Game/ABP_Soldier
+MRUItem6=/Game/BP_MyPlayer1
+MRUItem7=/Game/Levels/TechDemo4Level1
+MRUItem8=/Game/MAINHUD_NEW
+MRUItem9=/Game/AimingBeam
+MRUItem10=/Game/Levels/TechDemo4
+MRUItem11=/Game/PLAYERHUD
+MRUItem12=/Game/Blueprints/AimingBeam
+MRUItem13=/Game/PlayerStuff/Offset_AIM_Down
+MRUItem14=/Game/PlayerStuff/SoldierBlendSpace
+MRUItem15=/Game/MyMyShooterGameMode
+MRUItem16=/Game/SharedHUDWidget
+MRUItem17=/Game/MainHUD
+MRUItem18=/Game/MyPlayer2
+MRUItem19=/Game/AimOffset
 
 [PlacementMode]
+RecentlyPlaced=/Game/AmmoPickup.AmmoPickup;
 RecentlyPlaced=/Game/AimingBeam.AimingBeam;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/BP_MyPlayer2.BP_MyPlayer2;
@@ -2448,7 +2495,7 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=PIE
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2497,7 +2544,7 @@ NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
 BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
 bUseInlineSocketEditor=False
 bFlattenSkeletonHierarchyWhenFiltering=False
-bHideParentsWhenFiltering=False
+bHideParentsWhenFiltering=True
 bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
 bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
 bAllowMeshSectionSelection=False
@@ -2635,6 +2682,8 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 
 [AssetEditorToolkitTabLocation]
 /Game/Shooter_GameMode_BP.Shooter_GameMode_BP=0
@@ -2673,6 +2722,7 @@ Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 /Game/Blueprints/AimingBeam.AimingBeam=1
 /Game/PLAYERHUD.PLAYERHUD=1
 /Game/PlayerStuff/Ch15_nonPBR.Ch15_nonPBR=1
+/Game/PlayerStuff/Ch15_nonPBR_PhysicsAsset.Ch15_nonPBR_PhysicsAsset=0
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2753,4 +2803,5 @@ MovieRendererName=
 CameraComponent.CameraOptions=False
 SkeletalMeshComponent.Collision=True
 BP_MyPlayer1_C.Collision=False
+SkeletalBodySetup.Collision=True
 
