--- a/MyProject2/Config/DefaultInput.ini
+++ b/MyProject2/Config/DefaultInput.ini
@@ -84,6 +84,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button2)
 +ActionMappings=(ActionName="PlayerAim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button7)
 +ActionMappings=(ActionName="PlayerShoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button8)
++ActionMappings=(ActionName="Pickup",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="Pickup",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button1)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
