pickups spawn and destroy according to parameters, need to alter spawning settings

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/TechDemo4Level1
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.03-14.34.44
+MyProject2.TimeStamp=2024.01.03-15.31.48
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -2239,6 +2239,19 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+BP_MyPlayer1_C.Niagara=True
+BP_MyPlayer1_C.NiagaraComponent_Parameters=True
+BP_MyPlayer1_C.Attachment=True
+BP_MyPlayer1_C.Randomness=True
+BP_MyPlayer1_C.Parameters=True
+BP_MyPlayer1_C.Compilation=True
+BP_MyPlayer1_C.CameraCollision=True
+BP_MyPlayer1_C.CameraSettings=True
+BP_MyPlayer1_C.Lag=True
+Ammo_C.TransformCommon=True
+Health_C.TransformCommon=True
+GameStateBase.Replication=True
+GameStateBase.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2325,7 +2338,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
@@ -2337,14 +2350,14 @@ CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).Rota
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+CapsuleComponent=
+ShapeComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -2368,7 +2381,7 @@ StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyIn
 Shooter_GameMode_BP_C="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 MyProject2GameModeBase="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 GameModeBase="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
-Info="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
+Info=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 
 [RootWindow]
@@ -2568,7 +2581,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.PlayerAim,InputSettings.Bindings.ActionMappings.PlayerShoot,InputSettings.Bindings.ActionMappings.Pickup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
-CapsuleComponent=CapsuleComponent.Collision.Collision,
+CapsuleComponent=
 SceneComponent=
 PlayerStart=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
@@ -2580,7 +2593,7 @@ MovieSceneTakeSettings=
 TakeRecorderMicrophoneAudioSourceSettings=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
-BP_MyPlayer1_C=
+BP_MyPlayer1_C=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
 K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
 PlayerCameraManager=
 PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
@@ -2589,15 +2602,15 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 LandscapeGizmoRenderComponent=StaticMeshActor.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Materials/M_Basic_Wall
-MRUItem1=/Game/AmmoPickup
-MRUItem2=/Game/Health
-MRUItem3=/Game/BP_MyPlayer1
-MRUItem4=/Game/MAINHUD_NEW
-MRUItem5=/Game/Shooter_GameMode_BP
-MRUItem6=/Game/Ammo
-MRUItem7=/Game/PickupTest
-MRUItem8=/Game/Levels/TechDemo4Level1
+MRUItem0=/Game/Shooter_GameMode_BP
+MRUItem1=/Game/Health
+MRUItem2=/Game/Ammo
+MRUItem3=/Game/Levels/TechDemo4Level1
+MRUItem4=/Game/StarterContent/Materials/M_Basic_Wall
+MRUItem5=/Game/AmmoPickup
+MRUItem6=/Game/BP_MyPlayer1
+MRUItem7=/Game/MAINHUD_NEW
+MRUItem8=/Game/PickupTest
 MRUItem9=/Game/AimingBeam
 MRUItem10=/Game/PlayerStuff/Ch15_nonPBR_PhysicsAsset
 MRUItem11=/Game/PlayerStuff/Ch15_nonPBR_Skeleton
@@ -2611,6 +2624,7 @@ MRUItem18=/Game/PlayerStuff/SoldierBlendSpace
 MRUItem19=/Game/MyMyShooterGameMode
 
 [PlacementMode]
+RecentlyPlaced=/Game/Ammo.Ammo;
 RecentlyPlaced=/Game/PickupTest.PickupTest;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/AmmoPickup.AmmoPickup;
@@ -2633,7 +2647,7 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=CompilerResultsLog
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
