building level and amending spawn positions

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/TechDemo4Level1
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.03-15.31.48
+MyProject2.TimeStamp=2024.01.03-16.11.03
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -2252,6 +2252,43 @@ Ammo_C.TransformCommon=True
 Health_C.TransformCommon=True
 GameStateBase.Replication=True
 GameStateBase.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+MaterialExpressionParticleColor.MaterialExpression=True
+Barriers_C.Tick=True
+Barriers_C.Replication=True
+Barriers_C.Rendering=True
+Barriers_C.Collision=True
+Barriers_C.Actor=True
+Barriers_C.Input=True
+Barriers_C.TransformCommon=True
+Walls_C.Tick=True
+Walls_C.Replication=True
+Walls_C.Rendering=True
+Walls_C.Collision=True
+Walls_C.Actor=True
+Walls_C.Input=True
+Walls_C.TransformCommon=True
+DirectionalLightComponent.TransformCommon=True
+DirectionalLightComponent.Light=True
+DirectionalLightComponent.Rendering=True
+DirectionalLightComponent.Lightmass=True
+DirectionalLightComponent.LightShafts=True
+DirectionalLightComponent.CascadedShadowMaps=True
+DirectionalLightComponent.DistanceFieldShadows=True
+DirectionalLightComponent.RayTracing=True
+DirectionalLightComponent.AtmosphereAndCloud=True
+DirectionalLightComponent.Performance=True
+DirectionalLightComponent.LightFunction=True
+DirectionalLightComponent.Tags=True
+DirectionalLightComponent.Cooking=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2342,7 +2379,7 @@ Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
-Light=
+Light="\"Object.Light.DirectionalLightComponent.Object.Light.LightColor\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
@@ -2353,8 +2390,8 @@ MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\
 ActorComponent=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent=
 CapsuleComponent=
 ShapeComponent=
@@ -2377,12 +2414,16 @@ UserWidget="\"Object.Layout.Slot\" "
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
 PanelWidget="\"Object.Layout.Slot\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Shooter_GameMode_BP_C="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 MyProject2GameModeBase="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 GameModeBase="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
-Info=
+Info="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+DirectionalLightComponent="\"Object.Light.LightColor\" "
+LightComponent="\"Object.Light.LightColor\" "
+LightComponentBase="\"Object.Light.LightColor\" "
+DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.Light.LightColor\" "
 
 [RootWindow]
 ScreenPosition=X=309.000 Y=149.000
@@ -2581,13 +2622,13 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.PlayerAim,InputSettings.Bindings.ActionMappings.PlayerShoot,InputSettings.Bindings.ActionMappings.Pickup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
-CapsuleComponent=
+CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 SceneComponent=
 PlayerStart=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
 AimOffsetBlendSpace1D=AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,
 BP_MyPlayer2_C=CapsuleComponent.Physics.ConstraintsGroup,
-Landscape=CapsuleComponent.Physics.ConstraintsGroup,
+Landscape=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 RawInputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.PlayerAim,InputSettings.Bindings.ActionMappings.PlayerShoot,InputSettings.Bindings.ActionMappings.Pickup,
 MovieSceneTakeSettings=
 TakeRecorderMicrophoneAudioSourceSettings=
@@ -2600,30 +2641,35 @@ PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 LandscapeGizmoRenderComponent=StaticMeshActor.Collision.Collision,
+Barriers_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+Walls_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+Ammo_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Shooter_GameMode_BP
-MRUItem1=/Game/Health
-MRUItem2=/Game/Ammo
-MRUItem3=/Game/Levels/TechDemo4Level1
+MRUItem0=/Game/Barriers
+MRUItem1=/Game/Shooter_GameMode_BP
+MRUItem2=/Game/Walls
+MRUItem3=/Game/Health
 MRUItem4=/Game/StarterContent/Materials/M_Basic_Wall
-MRUItem5=/Game/AmmoPickup
-MRUItem6=/Game/BP_MyPlayer1
-MRUItem7=/Game/MAINHUD_NEW
-MRUItem8=/Game/PickupTest
-MRUItem9=/Game/AimingBeam
-MRUItem10=/Game/PlayerStuff/Ch15_nonPBR_PhysicsAsset
-MRUItem11=/Game/PlayerStuff/Ch15_nonPBR_Skeleton
-MRUItem12=/Game/PlayerStuff/Ch15_nonPBR
-MRUItem13=/Game/ABP_Soldier
-MRUItem14=/Game/Levels/TechDemo4
-MRUItem15=/Game/PLAYERHUD
-MRUItem16=/Game/Blueprints/AimingBeam
-MRUItem17=/Game/PlayerStuff/Offset_AIM_Down
-MRUItem18=/Game/PlayerStuff/SoldierBlendSpace
-MRUItem19=/Game/MyMyShooterGameMode
+MRUItem5=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem6=/Game/PickupColour
+MRUItem7=/Game/Ammo
+MRUItem8=/Game/Levels/TechDemo4Level1
+MRUItem9=/Game/AmmoPickup
+MRUItem10=/Game/BP_MyPlayer1
+MRUItem11=/Game/MAINHUD_NEW
+MRUItem12=/Game/PickupTest
+MRUItem13=/Game/AimingBeam
+MRUItem14=/Game/PlayerStuff/Ch15_nonPBR_PhysicsAsset
+MRUItem15=/Game/PlayerStuff/Ch15_nonPBR_Skeleton
+MRUItem16=/Game/PlayerStuff/Ch15_nonPBR
+MRUItem17=/Game/ABP_Soldier
+MRUItem18=/Game/Levels/TechDemo4
+MRUItem19=/Game/PLAYERHUD
 
 [PlacementMode]
+RecentlyPlaced=/Game/Walls.Walls;
+RecentlyPlaced=/Game/Barriers.Barriers;
 RecentlyPlaced=/Game/Ammo.Ammo;
 RecentlyPlaced=/Game/PickupTest.PickupTest;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2878,6 +2924,10 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/AmmoPickup.AmmoPickup=0
 /Game/Health.Health=0
 /Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall=0
+/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder=1
+/Game/Barriers.Barriers=0
+/Game/Ammo.Ammo=0
+/Game/PickupColour.PickupColour=0
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2963,7 +3013,6 @@ StaticMeshActor.Collision=True
 StaticMeshComponent.Collision=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
