pickups spawn at set locations randomly. next is menu/death animation and music, before working out how to reset level for next round

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/TechDemo4Level1
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.03-16.11.03
+MyProject2.TimeStamp=2024.01.03-16.18.19
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -2375,7 +2375,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
@@ -2387,12 +2387,12 @@ CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).Rota
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent=
 ShapeComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
@@ -2646,15 +2646,15 @@ Walls_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Col
 Ammo_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Barriers
+MRUItem0=/Game/Health
 MRUItem1=/Game/Shooter_GameMode_BP
-MRUItem2=/Game/Walls
-MRUItem3=/Game/Health
-MRUItem4=/Game/StarterContent/Materials/M_Basic_Wall
-MRUItem5=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem6=/Game/PickupColour
-MRUItem7=/Game/Ammo
-MRUItem8=/Game/Levels/TechDemo4Level1
+MRUItem2=/Game/Levels/TechDemo4Level1
+MRUItem3=/Game/Barriers
+MRUItem4=/Game/Walls
+MRUItem5=/Game/StarterContent/Materials/M_Basic_Wall
+MRUItem6=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem7=/Game/PickupColour
+MRUItem8=/Game/Ammo
 MRUItem9=/Game/AmmoPickup
 MRUItem10=/Game/BP_MyPlayer1
 MRUItem11=/Game/MAINHUD_NEW
