navigates from main menu to game

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=640
 NewWindowHeight=480
 MultipleInstancePositions=(X=0,Y=0)
-MultipleInstancePositions=(X=943,Y=234)
+MultipleInstancePositions=(X=1912,Y=-8)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/MainMenu
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.03-22.26.00
+MyProject2.TimeStamp=2024.01.04-10.07.08
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -2386,6 +2386,11 @@ WidgetInteractionComponent.ComponentReplication=True
 WidgetInteractionComponent.Activation=True
 WidgetInteractionComponent.Cooking=True
 WidgetInteractionComponent.Events=True
+GameModeBP_C.Tick=True
+GameModeBP_C.Pickup=True
+GameModeBP_C.Classes=True
+GameModeBP_C.Game=True
+GameModeBP_C.GameMode=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2514,7 +2519,7 @@ PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Shooter_GameMode_BP_C="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 MyProject2GameModeBase="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
-GameModeBase=
+GameModeBase="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 Info=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 DirectionalLightComponent="\"Object.Light.LightColor\" "
@@ -2528,6 +2533,7 @@ Spacer="\"Object.Layout.Slot\" "
 MainMenu2_C="\"Object.Layout.Slot\" "
 MyUserWidget="\"Object.Layout.Slot\" "
 MainMenuWB_C="\"Object.Layout.Slot\" "
+GameModeBP_C="\"Object.Pickup.PickupLocations\" \"Object.Pickup.PickupClasses\" "
 
 [RootWindow]
 ScreenPosition=X=309.000 Y=149.000
@@ -2749,28 +2755,29 @@ LandscapeGizmoRenderComponent=StaticMeshActor.Collision.Collision,
 Barriers_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 Walls_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 Ammo_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TestPlayerController
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/TechDemo4Level1
-MRUItem3=/Game/MAINHUD_NEW
-MRUItem4=/Game/MainMenu2
-MRUItem5=/Game/MainMenuGameModeBP
-MRUItem6=/Game/MainMenuWB
-MRUItem7=/Game/Walls
-MRUItem8=/Game/AimingBeam
-MRUItem9=/Game/Health
-MRUItem10=/Game/Shooter_GameMode_BP
-MRUItem11=/Game/Barriers
-MRUItem12=/Game/StarterContent/Materials/M_Basic_Wall
-MRUItem13=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem14=/Game/PickupColour
-MRUItem15=/Game/Ammo
-MRUItem16=/Game/AmmoPickup
-MRUItem17=/Game/BP_MyPlayer1
-MRUItem18=/Game/PickupTest
-MRUItem19=/Game/PlayerStuff/Ch15_nonPBR_PhysicsAsset
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Shooter_GameMode_BP
+MRUItem2=/Game/GameModeBP
+MRUItem3=/Game/Levels/TechDemo4Level1
+MRUItem4=/Game/TestPlayerController
+MRUItem5=/Game/MAINHUD_NEW
+MRUItem6=/Game/MainMenu2
+MRUItem7=/Game/MainMenuGameModeBP
+MRUItem8=/Game/MainMenuWB
+MRUItem9=/Game/Walls
+MRUItem10=/Game/AimingBeam
+MRUItem11=/Game/Health
+MRUItem12=/Game/Barriers
+MRUItem13=/Game/StarterContent/Materials/M_Basic_Wall
+MRUItem14=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem15=/Game/PickupColour
+MRUItem16=/Game/Ammo
+MRUItem17=/Game/AmmoPickup
+MRUItem18=/Game/BP_MyPlayer1
+MRUItem19=/Game/PickupTest
 
 [PlacementMode]
 RecentlyPlaced=/Game/Walls.Walls;
@@ -2798,7 +2805,7 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=PIE
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3037,6 +3044,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/Walls.Walls=0
 /Game/Levels/TechDemo4Level1.TechDemo4Level1:PersistentLevel.TechDemo4Level1=0
 /Game/MainMenuWB.MainMenuWB=0
+/Game/GameModeBP.GameModeBP=1
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
